tests/paczka1/fuzzy1/16036462.err
Error in line 6: 73 33 97,3
Error in line 1: S73 S33 39,4
Error in line 3: JAPF2II4WR S830 44,6
Error in line 4: 3PPMmB7sxa0 A229 953,7
Error in line 35: XtahBq S73 70,0
